# micro

./: .gitignore  Cargo.toml  todo.md
crates/micro/: Cargo.toml
crates/micro-aseprite-exporter/: Cargo.toml
crates/micro-aseprite-exporter/examples/: aseprite_test.rs
crates/micro-aseprite-exporter/src/: frame_with_metadata.rs  lib.rs
crates/micro-ecs/: Cargo.toml
crates/micro-ecs/src/: entities.rs  events.rs  lib.rs  prelude.rs  queues.rs  resources.rs  system.rs  systems.rs  test.rs  triggers.rs
crates/micro-ecs/src/system/: system_wrapper.rs
crates/micro-ldtk/: Cargo.toml
crates/micro-ldtk/examples/: ldtk_test.rs
crates/micro-ldtk/src/: entity.rs  entity_ref.rs  field.rs  layer.rs  lib.rs  loader.rs  tile.rs
crates/micro-resource/: Cargo.toml
crates/micro-resource/src/: lib.rs  loader.rs  resource_with_metadata.rs
crates/micro-resource/src/loader/: font.rs  shader.rs  texture.rs
crates/micro-scene-manager/: Cargo.toml
crates/micro-scene-manager/src/: lib.rs
crates/micro-starter/: .gitignore  Cargo.toml  build.rs
crates/micro-starter/src/: dirs.rs  globals.rs  input.rs  log.rs  main.rs  resources.rs  scene.rs  scene_manager.rs
crates/micro-starter/src/resources/: fonts.rs  textures.rs
crates/micro-starter/src/scene/: gameplay.rs
crates/micro-starter/src/scene/gameplay/: context.rs  event.rs  system.rs
crates/micro-starter/src/scene/gameplay/system/: prelude.rs
crates/micro-ui/: Cargo.toml
crates/micro-ui/examples/: test.rs  ui-test.rs
crates/micro-ui/src/: align.rs  aspect_ratio.rs  common_widget_state.rs  distribute.rs  dynamic_transform.rs  ellipse.rs  graphics_pipeline_widget.rs  image.rs  inspector.rs  lib.rs  macros.rs  manually_positioned.rs  mask.rs  mouse_input.rs  padding.rs  polygon.rs  polyline.rs  rectangle.rs  sizing.rs  stack.rs  stencil_reference_widget.rs  text.rs  transform.rs  ui.rs  widget_mouse_state.rs  widget_state.rs
crates/micro-ui/src/ui/: mouse_input.rs  widget_mouse_state.rs
crates/micro-visualizer/: Cargo.toml
crates/micro-visualizer/examples/: visualizer-test.rs
crates/micro-visualizer/src/: chapters.rs  conversions.rs  lib.rs  vis_runner.rs
crates/micro-visualizer/src/vis_runner/: chapters.rs  rendering.rs  ui.rs
crates/micro-wgpu/: Cargo.toml
crates/micro-wgpu/examples/: shader.wgsl  test.rs  wiggly.wgsl
crates/micro-wgpu/src/: app.rs  color.rs  context.rs  egui_integration.rs  event.rs  graphics.rs  input.rs  lib.rs  math.rs  time.rs
crates/micro-wgpu/src/context/: graphics.rs
crates/micro-wgpu/src/graphics/: canvas.rs  graphics_pipeline.rs  mesh.rs  shader.wgsl  sprite_batch.rs  stencil.rs  text.rs  texture.rs  vertex.rs
crates/micro-wgpu/src/graphics/graphics_pipeline/: builder.rs
crates/micro-wgpu/src/graphics/mesh/: builder.rs
crates/micro-wgpu/src/graphics/text/: font.rs
crates/micro-wgpu/src/input/: mouse_button.rs  scancode.rs
crates/micro-wgpu/src/input/virtual_controller/: config.rs  traits.rs
crates/micro-wgpu/src/math/: circle.rs  lerp.rs  vec_constants.rs
crates/micro/examples/: fragment.glsl  multiply.wgsl  player.aseprite  player.json  shader.wgsl  test.glsl  test.glsl.fragment  test.rs
crates/micro/src/: animation.rs  app.rs  color.rs  context.rs  egui.rs  egui_integration.rs  error.rs  event.rs  globals.rs  graphics.rs  input.rs  ldtk.rs  lib.rs  log.rs  macros.rs  math.rs  offset_and_count.rs  resource.rs  scene.rs  state.rs  time.rs  tween.rs  ui-old.rs  ui.rs  window.rs
crates/micro/src/animation/: from_file.rs  from_json.rs  multiple_from_file.rs  player.rs
crates/micro/src/context/: graphics.rs  push.rs  shader.glsl  text.rs
crates/micro/src/context/graphics/: cached_resources.rs  default_resources.rs  layouts.rs  render_pass.rs  shader.glsl
crates/micro/src/graphics/: address_mode.rs  blend_mode.rs  camera.rs  camera_3d.rs  canvas.rs  color.rs  color_constants.rs  culling.rs  draw_instanced_params.rs  draw_params.rs  drawable.rs  gpu_span.rs  graphics_pipeline.rs  image_data.rs  instance_buffer.rs  instance_params.rs  into_index_range.rs  into_instance_range.rs  into_range.rs  into_scale.rs  mesh.rs  nine_slice.rs  resource.rs  scaler.rs  shader.glsl  shader.rs  shader.wgsl  sprite_batch.rs  stencil.rs  storage_buffer.rs  text.rs  texture.rs  unused_resource.rs  util.rs  vertex.rs  vertex_attributes.rs
crates/micro/src/graphics/graphics_pipeline/: builder.rs
crates/micro/src/graphics/mesh/: builder.rs
crates/micro/src/graphics/mesh/builder/: vertex_constructors.rs
crates/micro/src/graphics/shader/: fragment.glsl  preprocess.rs  vertex.glsl
crates/micro/src/graphics/sprite_batch/: sprite_params.rs
crates/micro/src/graphics/text/: font.rs
crates/micro/src/input/: axis.rs  button.rs  gamepad.rs  keycode.rs  mouse_button.rs  mouse_scroll_delta.rs  scancode.rs  virtual_controller.rs
crates/micro/src/input/virtual_controller/: config.rs  real_control.rs  traits.rs
crates/micro/src/ldtk/: entity.rs  field.rs  layer.rs
crates/micro/src/math/: cardinal_direction.rs  circle.rs  clock_direction.rs  irect.rs  lerp.rs  line_segment.rs  polygon.rs  ray.rs  rect.rs  to_index.rs  urect.rs
crates/micro/src/math/rect/: test.rs
crates/micro/src/resource/: loader.rs  resource_with_metadata.rs
crates/micro/src/resource/loader/: animation_data.rs  font.rs  ldtk.rs  shader.rs  static_sound_data.rs  streaming_sound_data.rs  texture.rs  tiled.rs
crates/micro/src/time/: fixed_timestep_producer.rs  frame_time_tracker.rs
crates/micro/src/tween/: tween_sequence.rs
crates/micro/src/ui/: align.rs  axis.rs  child_path_generator.rs  cross_sizing.rs  ellipse.rs  fractional_max_size.rs  image.rs  macros.rs  mask.rs  match_size.rs  max_size.rs  mouse_input.rs  padding.rs  polygon.rs  polyline.rs  rectangle.rs  sizing.rs  stack.rs  state.rs  text.rs  transform.rs  ui.rs
crates/micro/src/ui-old/: ellipse.rs  mask.rs  stack.rs
crates/micro/src/ui/ui/: mouse_input.rs  widget_mouse_state.rs
examples/: test.rs  wavy.wgsl
resources/: Test.ldtkl  cube.blend  fragment.glsl  player.aseprite  player.settings  shader.glsl  vertex.glsl  (+1 more)
src/: font.rs  (+26 more)
(+145 files in other folders)
