[package]
name = "micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
crunch = "0.3.3"
fontdue = "0.7.2"
generational-arena = "0.2.8"
glam = { version = "0.20.2", features = ["bytemuck"] }
glow = "0.11.2"
image = { version = "0.24.0", default-features = false, features = ["png"] }
lyon = "0.17.10"
sdl2 = "0.35.2"
thiserror = "1.0.30"
