[package]
name = "micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.10.0", features = ["derive"] }
crunch = "0.3.3"
derive_more = "0.99.17"
egui = "0.20.1"
fontdue = { git = "https://github.com/mooman219/fontdue", rev = "ee59ba1" }
generational-arena = "0.2.8"
glam = { version = "0.22.0", features = ["bytemuck"] }
glow = "0.12.0"
image = { version = "0.24.2", default-features = false, features = ["png"] }
lyon_tessellation = "1.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }
sdl2 = "0.35.2"
thiserror = "1.0.31"

[features]
sdl2_bundled = ["sdl2/bundled"]
