[workspace]
members = [
	"crates/micro",
	"crates/micro-aseprite",
	"crates/micro-asset",
	"crates/micro-ecs",
	"crates/micro-kira-loaders",
	"crates/micro-scene-manager",
	"crates/micro-starter",
	"crates/micro-tiled-loader",
	"crates/micro-ui",
	"crates/micro-virtual-controller",
	"crates/micro-visualizer",
]
resolver = "3"
