[package]
name = "micro-aseprite-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asefile = "0.3.6"
crunch = "0.5.3"
image = "0.23"
indexmap = "2.0.2"
micro = { path = "../micro", features = ["serializing"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
