[package]
name = "micro-ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
hecs = "0.10.5"
indexmap = "2.11.4"
micro = { version = "0.1.0", path = "../micro" }

[features]
column-serialize = ["hecs/column-serialize"]
macros = ["hecs/macros"]
row-serialize = ["hecs/row-serialize"]
