[package]
name = "micro-resource"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["png"] }
indexmap = "2.6.0"
micro = { path = "../micro", features = ["serializing"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = "0.1.40"
