[package]
name = "micro-resource"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from", "display", "error"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
indexmap = "2.6.0"
micro = { path = "../micro", features = ["serializing"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
