[package]
name = "micro-scene-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
micro = { path = "../micro" }
tracy-client = { version = "0.18.0", default-features = false, features = [
    "broadcast",
    "callstack-inlines",
    "code-transfer",
    "context-switch-tracing",
    "sampling",
    "system-tracing",
] }
