[package]
name = "micro-starter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
backtrace = "0.3.73"
directories = "6.0.0"
exhaust = "0.2.0"
hecs = "0.10.3"
micro = { path = "../micro" }
micro-resource = { path = "../micro-resource" }
tracing = "0.1.37"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
embed-manifest = "1.3.1"
