[package]
name = "micro-starter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
exhaust = "0.2.0"
hecs = "0.10.3"
micro = { path = "../micro" }
micro-asset = { path = "../micro-asset" }
micro-scene-manager = { path = "../micro-scene-manager" }
micro-virtual-controller = { path = "../micro-virtual-controller" }
tracing = "0.1.37"

[build-dependencies]
embed-manifest = "1.3.1"
