[package]
name = "micro-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = { version = "2.0.1", features = [
    "index",
    "index_mut",
    "into_iterator",
] }
kira = "0.11.0"
micro = { path = "../micro" }
rfd = "0.16.0"

[profile.dev.package."*"]
opt-level = 3
