[package]
name = "micro-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "error"] }
exhaust = "0.2.1"
glam = "0.30.0"
lyon_tessellation = "1.0.15"
palette = { version = "0.7.6", default-features = false, features = [
	"std",
	"bytemuck",
] }
pollster = "0.4.0"
rand = { version = "0.9.0", optional = true }
sdl2 = { version = "0.37.0", features = ["raw-window-handle"] }
serde = { version = "1.0", features = ["derive"], optional = true }
wgpu = "24.0.1"

[features]
mint = ["glam/mint"]
rand = ["dep:rand", "glam/rand", "palette/random"]
sdl2_bundled = ["sdl2/bundled"]
serializing = ["serde", "palette/serializing", "glam/serde"]
