[package]
name = "micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.10.0", features = ["derive"] }
crunch = "0.5.3"
derive_more = { version = "2.0.1", features = ["from", "display", "error"] }
directories = "6.0.0"
egui = "0.31.0"
exhaust = "0.2.0"
fontdue = "0.9.0"
generational-arena = "0.2.8"
glam = { version = "0.29.0", features = ["bytemuck"] }
glow = "0.16.0"
image = { version = "0.25.0", default-features = false, features = ["png"] }
indexmap = "2.0.2"
itertools = "0.14.0"
lyon_tessellation = "1.0.0"
once_cell = "1.19.0"
palette = { version = "0.7.2", default-features = false, features = [
	"std",
	"bytemuck",
] }
rand = { version = "0.8.5", optional = true }
regex-lite = "0.1.5"
sdl2 = "0.37.0"
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1.37"
tracy-client = { version = "0.18.0", default-features = false, features = [
	"broadcast",
	"callstack-inlines",
	"code-transfer",
	"context-switch-tracing",
	"sampling",
	"system-tracing",
] }

[features]
mint = ["glam/mint"]
rand = ["dep:rand", "glam/rand", "palette/random"]
sdl2_bundled = ["sdl2/bundled"]
serializing = ["serde", "palette/serializing", "glam/serde"]
