[package]
name = "micro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.21.0", features = ["derive"] }
crunch = "0.5.3"
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
egui = "0.32.1"
exhaust = { version = "0.2.1", optional = true }
fontdue = "0.9.3"
generational-arena = "0.2.9"
glam = { version = "0.30.0", features = ["bytemuck"] }
image = { version = "0.25.0", default-features = false, features = ["png"] }
itertools = "0.14.0"
lyon_tessellation = "1.0.15"
palette = { version = "0.7.6", default-features = false, features = [
    "std",
    "bytemuck",
] }
pollster = "0.4.0"
rand = { version = "0.9.0", optional = true }
sdl3 = { version = "0.15.1", features = [
    "build-from-source",
    "raw-window-handle",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1.41"
tracy-client = { version = "0.18.0", default-features = false, features = [
    "broadcast",
    "callstack-inlines",
    "code-transfer",
    "context-switch-tracing",
    "sampling",
    "system-tracing",
] }
wgpu = { version = "26.0.1", default-features = false, features = [
    "dx12",
    "metal",
    "vulkan",
    "glsl",
] }

[features]
mint = ["glam/mint"]
rand = ["dep:rand", "glam/rand", "palette/random"]
serializing = ["serde", "palette/serializing", "glam/serde", "wgpu/serde"]
